Fix expected in test case