@@ -16,6 +16,7 @@ import ee.carlrobert.llm.client.http.ResponseEntity;
 import ee.carlrobert.llm.client.http.exchange.BasicHttpExchange;
 import ee.carlrobert.llm.client.http.exchange.StreamHttpExchange;
 import ee.carlrobert.llm.completion.CompletionEventListener;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import okhttp3.OkHttpClient;
@@ -31,7 +32,7 @@ public class ClaudeClientTest extends BaseTest {
     request.setStream(true);
     request.setMaxTokens(500);
     request.setMessages(List.of(
-            new ClaudeCompletionRequestMessage("user", new ClaudeMessageTextContent("USER_PROMPT"))));
+        new ClaudeCompletionRequestMessage("user", new ClaudeMessageTextContent("USER_PROMPT"))));
     expectAnthropic((StreamHttpExchange) exchange -> {
       assertThat(exchange.getUri().getPath()).isEqualTo("/v1/messages");
       assertThat(exchange.getMethod()).isEqualTo("POST");
@@ -49,7 +50,9 @@ public class ClaudeClientTest extends BaseTest {
               "claude-3",
               true,
               500,
-              List.of(Map.of("role", "user", "content", "USER_PROMPT")));
+              List.of(Map.of("role", "user",
+                  "content", Collections.singletonList(
+                      Map.of("type", "text", "text", "USER_PROMPT")))));
       return List.of(
           jsonMapResponse("delta", jsonMap("text", "He")),
           jsonMapResponse("delta", jsonMap("text", "llo")),
@@ -81,7 +84,7 @@ public class ClaudeClientTest extends BaseTest {
     request.setStream(false);
     request.setMaxTokens(500);
     request.setMessages(List.of(
-            new ClaudeCompletionRequestMessage("user", new ClaudeMessageTextContent("USER_PROMPT"))));
+        new ClaudeCompletionRequestMessage("user", new ClaudeMessageTextContent("USER_PROMPT"))));
     expectAnthropic((BasicHttpExchange) exchange -> {
       assertThat(exchange.getUri().getPath()).isEqualTo("/v1/messages");
       assertThat(exchange.getMethod()).isEqualTo("POST");
@@ -106,7 +109,9 @@ public class ClaudeClientTest extends BaseTest {
               0.1,
               1,
               2,
-              List.of(Map.of("role", "user", "content", "USER_PROMPT")));
+              List.of(Map.of("role", "user",
+                  "content", Collections.singletonList(
+                      Map.of("type", "text", "text", "USER_PROMPT")))));
       return new ResponseEntity(
           jsonMapResponse(
               e("content", jsonArray(jsonMap("text", "TEST_ASSISTANT_RESPONSE"))),
